syntax = "proto3";
import "payment.proto";
import "rideshare.proto";
import "car.proto";
import "user.proto";

option java_package = "carrental.broker";
option java_outer_classname = "BrokerServiceProto";

service Gateway {
  rpc ProcessPayment (paymentservice.ProcessPaymentRequest) returns (paymentservice.ProcessPaymentResponse);
  rpc OfferRide (rideshare.OfferRideRequest) returns (rideshare.OfferRideResponse);
  rpc BookSeat (rideshare.BookSeatRequest) returns (rideshare.BookSeatResponse);
  rpc AddCar (carservice.AddCarRequest) returns (carservice.AddCarResponse);
  rpc AddUser (userservice.RegisterUserRequest) returns (userservice.RegisterUserResponse);
}


